Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-5889

[Python][C++] Parquet backwards compat for timestamps without timezone broken

    XMLWordPrintableJSON

Details

    Description

      When reading a parquet file which has timestamp fields they are read as a timestamp with timezone UTC if the parquet file was written by pyarrow 0.13.0 and/or 0.12.1.

      Expected behavior would be that they are loaded as timestamps without any timezone information.

      The attached files contain one row for all basic types and a few nested types, the timestamp fields are called datetime64 and datetime64_tz

      see also https://github.com/JDASoftwareGroup/kartothek/tree/master/reference-data/arrow-compat

      https://github.com/JDASoftwareGroup/kartothek/blob/c47e52116e2dc726a74d7d6b97922a0252722ed0/tests/serialization/test_arrow_compat.py#L31

       

      Attachments

        1. 0.13.0.parquet
          10 kB
          Florian Jetter
        2. 0.12.1.parquet
          10 kB
          Florian Jetter

        Issue Links

          Activity

            People

              tpboudreau TP Boudreau
              fjetter Florian Jetter
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1.5h
                  1.5h