ARROW-5889: [C++][Parquet] Add property to indicate origin from converted type to TimestampLogicalType

This patch:
 - adds a new boolean member isFromConvertedType() to the TimestampLogicalType class that is set to "true" if the LogicalType was created from a converted type of TIMESTAMP_MILLIS or TIMESTAMP_MICROS
- prevents writing the TimestampLogicalType in the Parquet schema if this new property is true
- changes the Arrow reader to ignore the isAdjustedToUTC() property of the TimestampLogicalType if the type annotation came from a converted type

Author: TP Boudreau <tpboudreau@gmail.com>

Closes #4856 from tpboudreau/ARROW-5889 and squashes the following commits:

458f06382 <TP Boudreau> Add property showing converted type origin to TimestampLogicalType