cpp/src/arrow/ipc/metadata-internal.cc
@@ -360,10 +360,9 @@ static Status TypeFromFlatbuffer(const flatbuf::Field* field,
   auto type_data = field->type();
   if (type_data == nullptr) {
     return Status::IOError(
-      "Type-pointer in custom metadata of flatbuffer-encoded Field is null.");
+        "Type-pointer in custom metadata of flatbuffer-encoded Field is null.");
   }
-  RETURN_NOT_OK(
-      ConcreteTypeFromFlatbuffer(field->type_type(), type_data, children, out));
+  RETURN_NOT_OK(ConcreteTypeFromFlatbuffer(field->type_type(), type_data, children, out));
 
   // Look for extension metadata in custom_metadata field
   // TODO(wesm): Should this be part of the Field Flatbuffers table?
@@ -766,8 +765,8 @@ Status FieldFromFlatbuffer(const flatbuf::Field* field, DictionaryMemo* dictiona
     auto int_data = encoding->indexType();
     if (int_data == nullptr) {
       return Status::IOError(
-        "indexType-pointer in custom metadata of flatbuffer-encoded DictionaryEncoding "
-        "is null.");
+          "indexType-pointer in custom metadata of flatbuffer-encoded DictionaryEncoding "
+          "is null.");
     }
     RETURN_NOT_OK(IntFromFlatbuffer(int_data, &index_type));
     type = ::arrow::dictionary(index_type, type, encoding->isOrdered());
@@ -1155,7 +1154,7 @@ Status GetTensorMetadata(const Buffer& metadata, std::shared_ptr<DataType>* type
   auto type_data = tensor->type();
   if (type_data == nullptr) {
     return Status::IOError(
-      "Type-pointer in custom metadata of flatbuffer-encoded Tensor is null.");
+        "Type-pointer in custom metadata of flatbuffer-encoded Tensor is null.");
   }
   return ConcreteTypeFromFlatbuffer(tensor->type_type(), type_data, {}, type);
 }
@@ -1204,10 +1203,9 @@ Status GetSparseTensorMetadata(const Buffer& metadata, std::shared_ptr<DataType>
   auto type_data = sparse_tensor->type();
   if (type_data == nullptr) {
     return Status::IOError(
-      "Type-pointer in custom metadata of flatbuffer-encoded SparseTensor is null.");
+        "Type-pointer in custom metadata of flatbuffer-encoded SparseTensor is null.");
   }
-  return ConcreteTypeFromFlatbuffer(sparse_tensor->type_type(), type_data, {},
-                                    type);
+  return ConcreteTypeFromFlatbuffer(sparse_tensor->type_type(), type_data, {}, type);
 }
 
 // ----------------------------------------------------------------------
